client: fix styling
* Entry toolbars were sometimes overflowing and misaligned
* Search entry was outside/inside the viewport
* Add label to close button
* Add more visible outline to foccused buttons (light gray is not visible)
* Remove some unused selectors
* Settings button on mobile was using native button style
* Sidebar toolbar buttons are now nicely spaced with flexbox
* Fixed scrolling in fullscreen view (mobile)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ input {
     padding: 6px;
 }
 
+button:focus {
+    outline: 1px dotted currentColor;
+}
+
 #mainui {
     height: 100%;
 
@@ -287,10 +291,6 @@ span.offline-count.diff {
     display: none;
 }
 
-.nav-toolbar * + * {
-    margin-left: 0.2em;
-}
-
 #nav-refresh,
 #nav-settings,
 #nav-logout,
@@ -313,6 +313,8 @@ span.offline-count.diff {
 }
 
 .nav-toolbar {
+    display: flex;
+    padding: 0.5em;
     text-align: center;
 }
 
@@ -604,11 +606,13 @@ body:not(.publicupdate) #nav-login {
 .entry-toolbar {
     margin: -5px;
     padding: 5px;
-    padding-bottom: 10px;
     margin-top: 10px;
-    height: 20px;
     border-top: 1px solid #cccccc;
     background: #eaeaea;
+}
+
+.entry-toolbar li {
+    display: inline-block;
 }
 
 .entry-smartphone-share button,
@@ -616,10 +620,8 @@ body:not(.publicupdate) #nav-login {
     background-color: transparent;
     color: black;
     border: none;
-    float: left;
     cursor: pointer;
     padding: 0.5em;
-    vertical-align: middle;
 }
 
 .entry-toolbar .entry-loadimages {
@@ -632,13 +634,6 @@ body:not(.publicupdate) #nav-login {
 
 .entry-toolbar .entry-close {
     display: none;
-    width: 32px;
-    height: 32px;
-    margin: 0;
-    position: absolute;
-    left: 100%;
-    top: 0;
-    margin-left: -60px;
 }
 
 .stream-more,
@@ -1028,10 +1023,10 @@ body:not(.loggedin) .entry-unread {
     }
 
     #search-button {
-        top: 42px;
+        position: absolute;
+        bottom: -30px;
         left: 100%;
         margin-left: -50px;
-        padding: 10px;
         background-color: rgba(61, 109, 105, 0.4);
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
@@ -1117,9 +1112,15 @@ body:not(.loggedin) .entry-unread {
     }
 
     #nav-mobile-settings {
+        background: transparent;
+        border: 0;
+        padding: 0;
+        height: 50px;
+        width: 50px;
+        box-sizing: border-box;
+        cursor: pointer;
         position: absolute;
-        top: 8px;
-        right: 8px;
+        right: 0;
     }
 
     #nav {
@@ -1166,9 +1167,8 @@ body:not(.loggedin) .entry-unread {
     }
 
     .nav-toolbar button {
-        margin: 1em auto;
-        min-width: 85%;
-        width: 200px;
+        margin: 0.5em;
+        flex-grow: 1;
         display: block;
     }
 
@@ -1241,6 +1241,7 @@ body:not(.loggedin) .entry-unread {
         border: 0;
         width: 100%;
         height: 100%;
+        overflow: auto;
         background: #ffffff;
         z-index: 200;
     }
@@ -1263,6 +1264,16 @@ body:not(.loggedin) .entry-unread {
         margin: 0;
         font-size: 0.8em;
         margin-bottom: 0;
+        padding: 0;
+        height: 50px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .entry.selected.expanded .entry-toolbar svg {
+        display: block;
+        margin: auto;
     }
 
     .entry.selected.expanded .entry-close {
@@ -1294,16 +1305,11 @@ body:not(.loggedin) .entry-unread {
         display: block;
         margin-top: 10px;
         margin-bottom: 10px;
-        height: 50px;
     }
 
     .entry-smartphone-share li {
         list-style: none;
         display: inline-block;
-    }
-
-    .entry-smartphone-share button {
-        display: block;
     }
 
     .source-opml,
